@@ -1,3 +1,18 @@
+@keyframes fadeInSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#chat-section.entering {
+  animation: fadeInSlideUp 0.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+}
+
 #chat-section {
   display: none;
   padding: 12px;
@@ -420,21 +435,6 @@
   to {
     transform: translateY(0) scale(1);
   }
-}
-
-@keyframes fadeInSlideUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-#chat-section.entering {
-  animation: fadeInSlideUp 0.5s ease-out forwards;
 }
 
 @media (max-width: 1100px) {
