@@ -220,7 +220,7 @@ main {
 }
 
 #game-list.entering {
-  animation: fadeInSlideUp 1s ease-out forwards;
+  animation: fadeInSlideUp 0.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
 @media (max-width: 768px) {
