@@ -20,7 +20,7 @@
 }
 
 #notes-section.entering {
-  animation: fadeInSlideUp 0.5s ease-out forwards;
+  animation: fadeInSlideUp 0.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
 #notes-section h2 {
